// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`$ echo hi - array 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  stdout: \\"hi\\\\n\\"
  stderr: \\"\\"
  status: 0
  signal: undefined
}
",
}
`;

exports[`$ echo hi - string 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  stdout: \\"hi\\\\n\\"
  stderr: \\"\\"
  status: 0
  signal: undefined
}
",
}
`;

exports[`$ false 1`] = `
Object {
  "code": 1,
  "error": false,
  "stderr": "Error: Command failed: [\\"false\\"] (status = 1, signal = undefined)
  at makeErrorWithProperties (<rootDir>/bin/.../yavascript)
  at exec (<rootDir>/bin/.../yavascript)
  at $ (<rootDir>/bin/.../yavascript)
  at <eval> (<evalScript>) {
  status: 1
  signal: undefined
}
",
  "stdout": "",
}
`;

exports[`exec - child process receives args 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "[
  \\"<rootDir>/bin/.../yavascript\\"
  \\"-e\\"
  \\"scriptArgs\\"
  \\"bla\\"
  \\"blah\\"
  \\"--\\"
  \\"haha\\"
]
",
}
`;

exports[`exec false - array 1`] = `
Object {
  "code": 1,
  "error": false,
  "stderr": "Error: Command failed: [\\"false\\"] (status = 1, signal = undefined)
  at makeErrorWithProperties (<rootDir>/bin/.../yavascript)
  at exec (<rootDir>/bin/.../yavascript)
  at <eval> (<evalScript>) {
  status: 1
  signal: undefined
}
",
  "stdout": "",
}
`;

exports[`exec false - string 1`] = `
Object {
  "code": 1,
  "error": false,
  "stderr": "Error: Command failed: [\\"false\\"] (status = 1, signal = undefined)
  at makeErrorWithProperties (<rootDir>/bin/.../yavascript)
  at exec (<rootDir>/bin/.../yavascript)
  at <eval> (<evalScript>) {
  status: 1
  signal: undefined
}
",
  "stdout": "",
}
`;

exports[`exec parses arg string properly 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "hi
",
}
`;

exports[`exec true - array 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "",
}
`;

exports[`exec true - string 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "",
}
`;

exports[`exec with captureOutput true 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  stdout: \\"hi there\\\\n\\"
  stderr: \\"\\"
  status: 0
  signal: undefined
}
",
}
`;

exports[`exec with cwd 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "/tmp
",
}
`;

exports[`exec with env 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "HI=yeah
",
}
`;

exports[`exec with env vars 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  HI_MOM: \\"yup\\"
}
",
}
`;

exports[`exec with failOnNonZeroStatus false - running 'false' 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  status: 1
  signal: undefined
}
",
}
`;

exports[`exec with failOnNonZeroStatus false - running 'true' 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  status: 0
  signal: undefined
}
",
}
`;

exports[`exec's string parsing does not interpolate env vars 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "$HI
",
}
`;

exports[`exec's string parsing does not parse globs 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "**/*
",
}
`;

exports[`logging 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "ChildProcess.start: [
  \\"echo\\"
  \\"hi\\"
]
ChildProcess result: [
  \\"echo\\"
  \\"hi\\"
] -> {
  status: 0
  signal: undefined
}
ChildProcess.start: [
  \\"echo\\"
  \\"   hi\\"
]
ChildProcess result: [
  \\"echo\\"
  \\"   hi\\"
] -> {
  status: 0
  signal: undefined
}
",
  "stdout": "hi
   hi
",
}
`;
